nov 12 project-page padding in between

--- a/photography.html
+++ b/photography.html
@@ -31,7 +31,6 @@
     <div class="grid-row" style="width:calc(100% - 24px) !important;">
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">Photography</h1>
-
             <p>
                 A collection of photography-led experiments where I play with transparency, layering, and texture to create new visual narratives. This ongoing series focuses on process over perfection — exploring how visuals can evolve beyond static frames through unexpected combinations.
             </p>
@@ -44,7 +43,7 @@
         </section>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <img src="img/photography/dolo_1.png">
         </div>
@@ -58,7 +57,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/dolo_4.mp4" loop>
@@ -74,7 +73,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/dolo_7.mp4" loop>
@@ -90,7 +89,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <img src="img/photography/china_1.png">
         </div>
@@ -99,7 +98,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important;">
+    <div class="grid-row">
         <div class="grid-col-12of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/china_3.mp4" loop>
@@ -107,13 +106,13 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; max-width: none !important; height: auto !important;">
+    <div class="grid-row" style="max-width: none !important; height: auto !important;">
         <div class="grid-col-12of12">
             <img style="max-width: none !important;" src="img/photography/china_4.png">
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/sno_1.mp4" loop>
@@ -126,7 +125,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/sno_3.mp4" loop>
@@ -144,7 +143,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/sno_6.mp4" loop>
@@ -160,7 +159,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <img src="img/photography/water_4.png">
         </div>
@@ -171,7 +170,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/water_5.mp4" loop>
@@ -187,7 +186,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/water_9.mp4" loop>
