--- a/jde.html
+++ b/jde.html
@@ -66,20 +66,21 @@
         </section>
 
         <section class="visuals-section grid-col-8of12">
-            <div class="visual-stack">
+            <div class="vertical-stack">
                 <div class="project-image">
                     <img src="media/jde/token_map.png">
                 </div>
-
                 <div class="project-image">
                     <img src="media/jde/font.png">
                 </div>
-
-                <div class="grid-col-12of12 project-image">
-                    <img src="media/jde/grid.png">
-                </div>
             </div>
         </section>
+    </div>
+
+    <div class="grid-row">
+        <div class="grid-col-12of12">
+            <img src="media/jde/grid.png">
+        </div>
     </div>
 
     <div class="grid-row">
