nov 16 outcome section

--- a/montblanc.html
+++ b/montblanc.html
@@ -416,7 +416,14 @@
         </section>
     </div>
 
-
+    <div class="outcome-section">
+        <div class="title">
+            <h2>Your Title Here</h2>
+        </div>
+        <div class="body">
+            <p>Your Body Text Here</p>
+        </div>
+    </div>
 
 
 
