--- a/toyota.html
+++ b/toyota.html
@@ -31,21 +31,15 @@
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">TOYOTA</h1>
             <p>
-                Toyota and Lexus Europe's existing design system had grown organically over time, supporting a broad spectrum of digital products, platforms, and regional adaptations across 40 markets. But as the brands' digital presence expanded in scale and complexity, it became clear the system was no longer meeting the needs of designers, developers, or stakeholders. Inconsistencies, inefficiencies, and fragmented resources were slowing teams down and undermining brand cohesion.
-            </p>
-            <p>
-                This presented a pivotal opportunity: to reimagine the system as a scalable, flexible, and consistent design framework—one capable of future-proofing the Toyota and Lexus digital ecosystem across markets and platforms.
-            </p>
-            <p>
-                While Toyota and Lexus maintain distinct brand identities, the vision was to create a shared design system infrastructure that could support their unique expressions without duplicating effort.
+                To enhance the Toyota & Lexus Digital Experience Platform, we were tasked with reimagining its navigation—fixing existing issues while creating a smoother, more intuitive way for users to explore the brand ecosystem. The challenge was to design a refined, scalable system that could adapt to diverse market requirements and user expectations worldwide. Our ambition was to strike the right balance between discoverability and efficiency, ensuring users can easily explore and quickly access what they need without friction.
             </p>
 
             <ul class="project-specs">
-              <li>Design System Architecture</li>
-              <li>Cross-Brand System Strategy</li>
-              <li>Component Design</li>
-              <li>Token System Implementation</li>
-              <li>Accessibility Design</li>
+              <li>Information Architecture</li>
+              <li>Interaction Design</li>
+              <li>User Research and Testing</li>
+              <li>Cross-Market Strategy</li>
+              <li>Accessibility and Usability</li>
           </ul>
         </section>
 
@@ -64,8 +58,218 @@
         </section>
     </div>
 
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Research Methodology</h2>
+            <p>
+                Our research combined insights from Toyota's internal teams, industry best practices, and user needs to ensure a balanced solution that considered all perspectives.
+            </p>
+            
+        </section>
 
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/method_1.png">
+            </div>
+        </section>
+    </div>
 
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Toyota Perspective</h2>
+            <p>
+                We began the project with a collaborative workshop involving key market stakeholders to align on goals, surface constraints, and uncover opportunities. The session was structured to address both user experience and business needs.
+            </p>
+            <p>
+                This structured approach helped us:
+            </p>
+            <ol class="numbered-list">
+                <li>Identified localization constraints, such as language length and content variations across regions</li>
+                <li>Explored UX triggers and structural considerations, including differences in behavior across desktop and mobile</li>
+                <li>Defined measurable goals, setting performance metrics to track navigation success</li>
+                <li>Mapped business opportunities, aligning potential features with broader strategic objectives</li>
+                <li>Gathered likes and dislikes, learning from current pain points and successes across platforms</li>
+                <li>Benchmarked references, analyzing best-in-class navigation models to inform our approach</li>
+            </ol>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/toyota_p_1.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-3of12">
+            <div class="project-image">
+                <img src="media/toyota/img/toyota_p_2.png">
+            </div>
+        </section>
+        <section class="grid-col-9of12">
+            <div class="project-image">
+                <img src="media/toyota/img/toyota_p_3.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Prioritization & Roadmapping</h2>
+            <p>
+                In a follow-up session, we focused on prioritizing the insights gathered from Workshop 1. Using the RICE framework (Reach, Impact, Confidence, Effort) to objectively determine which should be tackled first—minimizing emotional or gut-based decision-making.
+            </p>
+            <p>
+                Together we:
+            </p>
+            <ol class="numbered-list">
+                <li>Estimate impact vs. effort across proposed features</li>
+                <li>Align on short- and long-term priorities</li>
+                <li>Lay the foundation for a clear and actionable roadmap</li>
+            </ol>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/prio_1.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/takeaway_1.png">
+            </div>
+        </section>
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/takeaway_2.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/takeaway_3.png">
+            </div>
+        </section>
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/takeaway_4.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/takeaway_5.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Revolution Approach</h2>
+            <p>
+                A top to bottom approach that looks at the larger system that needs to be resolved thereby requiring the redesign and testing of several components. The outcome is a refreshed navigation system.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/revolution_1.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Industry Perspective</h2>
+            <p>
+                We researched over 35 best-in-class sites across industry sectors and pulled the ones most relevant to DXP. Each site was looked at through a lens of five categories identified through earlier sessions that encompass the benchmarking elements.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/industry_1.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Audience Perspective</h2>
+            <p>
+                We drew on consumer research and qualitative data to generate actionable insights into user behaviours, needs, and expectations.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/toyota/img/audience_1.png">
+            </div>
+        </section>
+    </div>
+
+    <section class="grid-col-6of12">
+        <div class="project-image">
+            <img src="media/toyota/img/audience_2.png">
+        </div>
+    </section>
+    <section class="grid-col-6of12">
+        <div class="project-image">
+            <img src="media/toyota/img/audience_3.png">
+        </div>
+    </section>
+
+    <div class="grid-row">
+        <section class="grid-col-12of12">
+            <div class="project-image">
+                <img src="media/toyota/img/audience_4.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Final Designs</h2>
+            <p>
+                After testing and validating several design directions via unmoderated online user sessions, we arrived at a final solution ready for handoff to development.
+            </p>
+        </section>
+    </div>
+    <div class="grid-row">
+        <section class="grid-col-12of12">
+            <div class="project-image">
+                <img src="media/toyota/img/mobile_1.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/desktop_1.png">
+            </div>
+        </section>
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/desktop_2.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-6of12">
+            <div class="project-image">
+                <img src="media/toyota/img/desktop_3.png">
+            </div>
+        </section>
+    </div>
 
 
 
