--- a/toyota.html
+++ b/toyota.html
@@ -74,203 +74,277 @@
         </section>
     </div>
 
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Toyota Perspective</h2>
-            <p>
-                We began the project with a collaborative workshop involving key market stakeholders to align on goals, surface constraints, and uncover opportunities. The session was structured to address both user experience and business needs.
-            </p>
-            <p>
-                This structured approach helped us:
-            </p>
-            <ol class="numbered-list">
-                <li>Identified localization constraints, such as language length and content variations across regions</li>
-                <li>Explored UX triggers and structural considerations, including differences in behavior across desktop and mobile</li>
-                <li>Defined measurable goals, setting performance metrics to track navigation success</li>
-                <li>Mapped business opportunities, aligning potential features with broader strategic objectives</li>
-                <li>Gathered likes and dislikes, learning from current pain points and successes across platforms</li>
-                <li>Benchmarked references, analyzing best-in-class navigation models to inform our approach</li>
-            </ol>
-        </section>
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Toyota Perspective</h2>
+                <p>
+                    We began the project with a collaborative workshop involving key market stakeholders to align on goals, surface constraints, and uncover opportunities. The session was structured to address both user experience and business needs.
+                </p>
+                <p>
+                    This structured approach helped us:
+                </p>
+                <ol class="numbered-list">
+                    <li>Identified localization constraints, such as language length and content variations across regions</li>
+                    <li>Explored UX triggers and structural considerations, including differences in behavior across desktop and mobile</li>
+                    <li>Defined measurable goals, setting performance metrics to track navigation success</li>
+                    <li>Mapped business opportunities, aligning potential features with broader strategic objectives</li>
+                    <li>Gathered likes and dislikes, learning from current pain points and successes across platforms</li>
+                    <li>Benchmarked references, analyzing best-in-class navigation models to inform our approach</li>
+                </ol>
+            </section>
 
-        <section class="visuals-section grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/toyota_p_1.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="grid-col-3of12">
-            <div class="project-image">
-                <img src="media/toyota/img/toyota_p_2.png">
-            </div>
-        </section>
-        <section class="grid-col-9of12">
-            <div class="project-image">
-                <img src="media/toyota/img/toyota_p_3.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Prioritization & Roadmapping</h2>
-            <p>
-                In a follow-up session, we focused on prioritizing the insights gathered from Workshop 1. Using the RICE framework (Reach, Impact, Confidence, Effort) to objectively determine which should be tackled first—minimizing emotional or gut-based decision-making.
-            </p>
-            <p>
-                Together we:
-            </p>
-            <ol class="numbered-list">
-                <li>Estimate impact vs. effort across proposed features</li>
-                <li>Align on short- and long-term priorities</li>
-                <li>Lay the foundation for a clear and actionable roadmap</li>
-            </ol>
-        </section>
-
-        <section class="visuals-section grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/prio_1.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="grid-col-6of12">
-            <div class="project-image">
-                <img src="media/toyota/img/takeaway_1.png">
-            </div>
-        </section>
-        <section class="grid-col-6of12">
-            <div class="project-image">
-                <img src="media/toyota/img/takeaway_2.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="grid-col-6of12">
-            <div class="project-image">
-                <img src="media/toyota/img/takeaway_3.png">
-            </div>
-        </section>
-        <section class="grid-col-6of12">
-            <div class="project-image">
-                <img src="media/toyota/img/takeaway_4.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/takeaway_5.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Revolution Approach</h2>
-            <p>
-                A top to bottom approach that looks at the larger system that needs to be resolved thereby requiring the redesign and testing of several components. The outcome is a refreshed navigation system.
-            </p>
-        </section>
-
-        <section class="visuals-section grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/revolution_1.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Industry Perspective</h2>
-            <p>
-                We researched over 35 best-in-class sites across industry sectors and pulled the ones most relevant to DXP. Each site was looked at through a lens of five categories identified through earlier sessions that encompass the benchmarking elements.
-            </p>
-        </section>
-
-        <section class="visuals-section grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/industry_1.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Audience Perspective</h2>
-            <p>
-                We drew on consumer research and qualitative data to generate actionable insights into user behaviours, needs, and expectations.
-            </p>
-        </section>
-
-        <section class="visuals-section grid-col-8of12">
-            <div class="project-image">
-                <img src="media/toyota/img/audience_1.png">
-            </div>
-        </section>
-    </div>
-
-    <section class="grid-col-6of12">
-        <div class="project-image">
-            <img src="media/toyota/img/audience_2.png">
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/toyota_p_1.png">
+                </div>
+            </section>
         </div>
-    </section>
-    <section class="grid-col-6of12">
-        <div class="project-image">
-            <img src="media/toyota/img/audience_3.png">
+
+        <div class="grid-row">
+            <section class="grid-col-3of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/toyota_p_2.png">
+                </div>
+            </section>
+            <section class="grid-col-9of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/toyota_p_3.png">
+                </div>
+            </section>
         </div>
-    </section>
-
-    <div class="grid-row">
-        <section class="grid-col-12of12">
-            <div class="project-image">
-                <img src="media/toyota/img/audience_4.png">
-            </div>
-        </section>
     </div>
 
-    <div class="grid-row">
-        <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Final Designs</h2>
-            <p>
-                After testing and validating several design directions via unmoderated online user sessions, we arrived at a final solution ready for handoff to development.
-            </p>
-        </section>
-    </div>
-    <div class="grid-row">
-        <section class="grid-col-12of12">
-            <div class="project-image">
-                <img src="media/toyota/img/mobile_1.png">
-            </div>
-        </section>
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Prioritization & Roadmapping</h2>
+                <p>
+                    In a follow-up session, we focused on prioritizing the insights gathered from Workshop 1. Using the RICE framework (Reach, Impact, Confidence, Effort) to objectively determine which should be tackled first—minimizing emotional or gut-based decision-making.
+                </p>
+                <p>
+                    Together we:
+                </p>
+                <ol class="numbered-list">
+                    <li>Estimate impact vs. effort across proposed features</li>
+                    <li>Align on short- and long-term priorities</li>
+                    <li>Lay the foundation for a clear and actionable roadmap</li>
+                </ol>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/prio_1.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/takeaway_1.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/takeaway_2.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/takeaway_3.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/takeaway_4.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/takeaway_5.png">
+                </div>
+            </section>
+        </div>
     </div>
 
-    <div class="grid-row">
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Revolution Approach</h2>
+                <p>
+                    A top to bottom approach that looks at the larger system that needs to be resolved thereby requiring the redesign and testing of several components. The outcome is a refreshed navigation system.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/revolution_1.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Industry Perspective</h2>
+                <p>
+                    We researched over 35 best-in-class sites across industry sectors and pulled the ones most relevant to DXP. Each site was looked at through a lens of five categories identified through earlier sessions that encompass the benchmarking elements.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/industry_1.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Audience Perspective</h2>
+                <p>
+                    We drew on consumer research and qualitative data to generate actionable insights into user behaviours, needs, and expectations.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/audience_1.png">
+                </div>
+            </section>
+        </div>
+
         <section class="grid-col-6of12">
             <div class="project-image">
-                <img src="media/toyota/img/desktop_1.png">
+                <img src="media/toyota/img/audience_2.png">
             </div>
         </section>
         <section class="grid-col-6of12">
             <div class="project-image">
-                <img src="media/toyota/img/desktop_2.png">
+                <img src="media/toyota/img/audience_3.png">
             </div>
         </section>
+
+        <div class="grid-row">
+            <section class="grid-col-12of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/audience_4.png">
+                </div>
+            </section>
+        </div>
     </div>
 
-    <div class="grid-row">
-        <section class="grid-col-6of12">
-            <div class="project-image">
-                <img src="media/toyota/img/desktop_3.png">
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-5of12">
+                <h2 class="section-title">Final Designs</h2>
+                <p>
+                    After testing and validating several design directions via unmoderated online user sessions, we arrived at a final solution ready for handoff to development.
+                </p>
+            </section>
+        </div>
+        <div class="grid-row">
+            <section class="grid-col-12of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/mobile_1.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/desktop_1.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/desktop_2.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/desktop_3.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-5of12">
+                <h2 class="section-title">Content Guidelines</h2>
+                <p>
+                    To ensure clarity and consistency across markets, we developed a set of navigation content guidelines. These covered tone of voice, labeling conventions, and hierarchy principles, ensuring users can quickly understand and interact with menus regardless of language or region.
+                </p>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_1.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_2.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_3.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_4.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_5.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/guidelines_6.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="outcome-section">
+        <div class="wrapper">
+            <div class="title">
+                <h2>Reflection</h2>
             </div>
-        </section>
+            <div class="body">
+                <p>
+                    This was a significant change, requiring open communication with all markets, careful consideration of localization and language constraints, and ongoing feedback to understand what works, and what doesn't — in each region, resulting in a solution that's flexible yet true to the core strategy and information architecture.
+                </p>
+            </div>
+        </div>
     </div>
-
 
 
 
