--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2019</h2>
-                  <h2 class="text-wrapper-4">PUMA: RUN MY WAY</h2>
+                  <h2 class="text-wrapper-4">PUMA: RUN MY WAY 管我怎么跑</h2>
                 </div>
                 <span class="text-wrapper-5">[interactive installation]</span>
               </div>
