--- a/montblanc.html
+++ b/montblanc.html
@@ -147,7 +147,9 @@
 
         <div class="grid-row">
             <div class="grid-col-12of12">
-                <img src="media/mb/img/type_5.png">
+                <div class="project-image">
+                    <img src="media/mb/img/type_5.png">
+                </div>
             </div>
         </div>
     </div>
