--- a/photography.html
+++ b/photography.html
@@ -28,7 +28,7 @@
 
     <div id="site-header"></div>
     
-    <div class="grid-row" style="width:calc(100% - 24px) !important;">
+    <div class="grid-row" style="width:calc(100% - 24px) ">
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">Photography</h1>
             <p>
@@ -39,15 +39,17 @@
         <section class="visuals-section grid-col-7of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/mirror.mp4" loop>
-                <div class="play-icon">TESTING</div>
-                <div class="stop-icon">❚❚</div>
+                <!--<div class="play-icon">TESTING</div>
+                <div class="stop-icon">❚❚</div>-->
             </div>
         </section>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
-            <img src="media/photography/img/dolo_1.png">
+            <div class="project-image">
+                <img src="media/photography/img/dolo_1.png">
+            </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
@@ -57,11 +59,13 @@
                 </div>
         </div>
         <div class="grid-col-4of12">
-            <img src="media/photography/img/dolo_3.png">
+            <div class="project-image">
+                <img src="media/photography/img/dolo_3.png">
+            </div>
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/dolo_4.mp4" loop>
@@ -77,14 +81,16 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/dolo_7.mp4" loop>
             </div>
         </div>
         <div class="grid-col-4of12">
-            <img src="media/photography/img/dolo_8.png">
+            <div class="project-image">
+                <img src="media/photography/img/dolo_8.png">
+            </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
@@ -93,12 +99,16 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
-            <img src="media/photography/img/china_1.png">
+            <div class="project-image">
+                <img src="media/photography/img/china_1.png">
+            </div>
         </div>
         <div class="grid-col-8of12">
-            <img src="media/photography/img/china_2.png">
+            <div class="project-image">
+                <img src="media/photography/img/china_2.png">
+            </div>
         </div>
     </div>
 
@@ -110,13 +120,15 @@
         </div>
     </div>
 
-    <div class="grid-row" style="max-width: none !important; height: auto !important;">
+    <div class="grid-row">
         <div class="grid-col-12of12">
-            <img style="max-width: none !important;" src="media/photography/img/china_4.png">
+            <div class="project-image">
+                <img src="media/photography/img/china_4.png">
+            </div>
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/sno_1.mp4" loop>
@@ -129,7 +141,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/sno_3.mp4" loop>
@@ -147,14 +159,16 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/sno_6.mp4" loop>
             </div>
         </div>
         <div class="grid-col-4of12">
-            <img src="media/photography/img/water_1.png">
+            <div class="project-image">
+                <img src="media/photography/img/water_1.png">
+            </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
@@ -163,9 +177,11 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
-            <img src="media/photography/img/water_4.png">
+            <div class="project-image">
+                <img src="media/photography/img/water_4.png">
+            </div>
         </div>
         <div class="grid-col-8of12">
             <div class="project-video">
@@ -174,14 +190,16 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/water_5.mp4" loop>
             </div>
         </div>
         <div class="grid-col-4of12">
-            <img src="media/photography/img/water_6.png">
+            <div class="project-image">
+                <img src="media/photography/img/water_6.png">
+            </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
@@ -190,7 +208,7 @@
         </div>
     </div>
 
-    <div class="grid-row" style="width:calc(100% - 48px) !important;">
+    <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="media/photography/vd/water_9.mp4" loop>
